# MyBOT

./: AbstractBot.cpp  AbstractBot.h  CMakeLists.txt  IAPiTelegram.h  IApiTelegram.cpp  README.md  main.cpp
